fix #103: z-index issues

--- a/draft-js-mention-plugin/src/autocompleteStyles.css
+++ b/draft-js-mention-plugin/src/autocompleteStyles.css
@@ -13,4 +13,5 @@
   cursor: pointer;
   padding-top: 8px;
   padding-bottom: 8px;
+  z-index: 2;
 }
